--- a/index.html
+++ b/index.html
@@ -6,20 +6,6 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <style>
-        .mainSection{
-            height: 100vh;
-            background-image: url("https://img.wallpapersafari.com/desktop/1920/1080/21/87/Ud2VAi.jpg");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center center;
-            background-size: cover;
-        }
-        .mylead {
-            font-size: 30px;
-            font-weight: 300;
-        }
-    </style>
     <script src="bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -34,15 +20,21 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="auto/auto.html">Le nostre auto</a>
               <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link">Login</a>
+                <a class="nav-link">Registrati</a>
+            </div>
+          </div>
           </div>
         </div>
       </nav>
     <!--Main-->
-    <section class="mainSection pb-3" style="overflow:scroll">
+    <section class="mainSection">
         <div class="container">
             <div class="row">
                 <p class="mylead mt-5 text-center">Benvenuti nel nostro sito, siamo sicuri che trovete l'auto elettrica che fa per voi.</p>
@@ -182,36 +174,13 @@
                 </div>
             </div>
         </div>
-    </div>
     </section>
-    <!--Team-->
-    <div class="container">
-        <div class="row">
-            <p class="mylead">Il nostro team:</p>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:180px;height:180px;">
-                <h4>Giuseppe Pilla</h4>
-                <p>Architect & Engineer</p>
-            </div>
-            <div class="col">
-                <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:180px;height:180px;">
-                <h4>Simone Pascucci</h4>
-                <p>Architect & Engineer</p>
-            </div>
-            <div class="col">
-                <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" style="width:180px;height:180px;">
-                <h4>Matteo Cutroni</h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
-    </div>
+    <br>
     <!--Footer-->
     <div class="container p-3">
       <div class="row">
         <div class="text-left text-md-start">
-          <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022 Pilla-Pascucci-Cutroni</span>
+          <span class="copyright">Copyright &copy; Progetto Linguaggie e tecnologie per il web 2022 Pilla-Pascucci-Cutroni</span>
       </div>
     </div>
 </body>
