--- a/index.html
+++ b/index.html
@@ -55,16 +55,18 @@
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
-                        <div class="carousel-inner">
+                        <div class="carousel-inner rounded-10">
                         <div class="carousel-item active">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;"  class="border border-dark">
                             <img src="https://www.avvenire.it/c/2021/PublishingImages/e1c771b09d1b4ee492f4fe1441dc7e87/mercedes_e_74687387.jpg?width=1024" class="d-block w-100 rounded-10" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
+                            </a>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;"  class="border border-dark">
                             <img src="https://cdn.pocket-lint.com/r/s/970x/assets/images/157922-cars-review-audi-e-tron-gt-review-image1-is1tutwhpd.jpg" class="d-block w-100 rounded-10" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
@@ -73,7 +75,7 @@
                             </a>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;" class="border border-dark">
                             <img src="https://www.veicolielettricinews.it/files/2014/03/Schermata-2014-03-18-a-00.31.32.png" class="d-block w-100 rounded-10" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
