miglioramento area notizie

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <p class="mylead mt-5 text-center">Benvenuti nel nostro sito, siamo sicuri che trovete l'auto elettrica che fa per voi.</p>
             </div>
-            <div class="row justify-content-center mt-3 mb-3">
+            <div class="row justify-content-center mb-5">
                 <div class="col-md-8 ">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -47,7 +47,7 @@
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
-                        <div class="carousel-inner rounded-10">
+                        <div class="carousel-inner">
                         <div class="carousel-item active">
                             <a href="https://www.google.com" style="text-decoration:none; color: white;"  class="border border-dark">
                             <img src="https://www.avvenire.it/c/2021/PublishingImages/e1c771b09d1b4ee492f4fe1441dc7e87/mercedes_e_74687387.jpg?width=1024" class="d-block w-100 rounded-10" alt="...">
@@ -88,11 +88,13 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section>
         <div class="container" >
             
-            <div class="row">
+            <div class="row mt-3" style="background-color: white;">
                 <!--aggiungo io parte news-->
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 rounded-left-5 rounded-lg-5" style="background-color: white;">
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <!-- News block -->
                     <div>
                     <hr>
@@ -120,7 +122,8 @@
                     <hr />
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 rounded-lg-5" style="background-color: white;">
+
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 ">
                     <!-- News block -->
                     <div>
                     <hr>
@@ -147,7 +150,7 @@
                     <hr />
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 rounded-right-5 rounded-lg-5" style="background-color: white;">
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <!-- News block -->
                     <div>
                     <hr>
