--- a/index.html
+++ b/index.html
@@ -37,39 +37,39 @@
     <section class="mainSection">
         <div class="container">
             <div class="row">
-                <p class="mylead mt-5 text-center">Benvenuti nel nostro sito, siamo sicuri che trovete l'auto elettrica che fa per voi.</p>
+                <p class="mylead mt-4 mt-sm-2 mt-md-4 text-center">Benvenuti nel nostro sito, siamo sicuri che trovete l'auto elettrica che fa per voi.</p>
             </div>
-            <div class="row justify-content-center mb-5">
+            <div class="row justify-content-center">
                 <div class="col-md-8 ">
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide mb-5 mt-4 mt-sm-2 mt-md-3" style="max-height: 80;" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
+                        </div>
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;"  class="border border-dark">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
                             <img src="https://www.avvenire.it/c/2021/PublishingImages/e1c771b09d1b4ee492f4fe1441dc7e87/mercedes_e_74687387.jpg?width=1024" class="d-block w-100 rounded-10" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                             </a>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;"  class="border border-dark">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
                             <img src="https://cdn.pocket-lint.com/r/s/970x/assets/images/157922-cars-review-audi-e-tron-gt-review-image1-is1tutwhpd.jpg" class="d-block w-100 rounded-10" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                             </div>
                             </a>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;" class="border border-dark">
+                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
                             <img src="https://www.veicolielettricinews.it/files/2014/03/Schermata-2014-03-18-a-00.31.32.png" class="d-block w-100 rounded-10" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
                             </a>
@@ -92,7 +92,7 @@
     <section>
         <div class="container" >
             
-            <div class="row mt-3" style="background-color: white;">
+            <div class="row mt-2" style="background-color: white;">
                 <!--aggiungo io parte news-->
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <!-- News block -->
