primi filtri funzionanti

--- a/index.html
+++ b/index.html
@@ -175,9 +175,8 @@
             </div>
         </div>
     </section>
-    <br>
     <!--Footer-->
-    <div class="container p-3">
+    <div class="container mt-5 p-3">
       <div class="row">
         <div class="text-left text-md-start">
           <span class="copyright">Copyright &copy; Progetto Linguaggie e tecnologie per il web 2022 Pilla-Pascucci-Cutroni</span>
