--- a/auto/auto.html
+++ b/auto/auto.html
@@ -33,12 +33,12 @@
           </div>
           </div>
         </div>
-      </nav>
+    </nav>
       <!--Main-->
-      <section class="AutoDisplay" id="app">
-          <div class="row">
+    <section class="AutoDisplay" id="app">
+          <div class="row row-cols-2">
               <!--Menu ricerca-->
-              <div class="col-2 bg-light collapse-horizontal" style="height: 100vh;">
+              <div class="col-md-2 bg-light collapse-horizontal navbar-expand-lg" style="height: 100vmax;">
                   <div class="container pt-3">
                       <span class="lead">Filtra per:</span>
                       <form class="mt-3">
@@ -70,8 +70,8 @@
                         <label for="selectCarrozzeria" class="mt-4 ms-3">Carrozzeria:</label>
                         <select class="form-select" id="selectCarrozzeria" v-model="carrozzeria">
                             <option value="" selected>Seleziona tipologia</option>
-                            <option value="berlina">Utilitaria</option>
-                            <option value="utilitaria">Berlina</option>
+                            <option value="utilitaria">Utilitaria</option>
+                            <option value="berlina">Berlina</option>
                             <option value="supercar">Super Car</option>
                             <option value="suv">SUV</option>
                             <option value="crossover">Crossover</option>
@@ -97,33 +97,27 @@
                   </div>
               </div>
               <!--Menu auto-->
-              <div class="col justify-content-start">
-                    <div class="row">
-                        <div class="col m-3 text-start" v-for="auto in automobili":key="auto.id">
-                          <div v-if="(marca==auto.marca || marca == '')&&
-                                     (posti == 0 || posti == auto.posti)&&
-                                     (carrozzeria == '' || carrozzeria == auto.carrozzeria)&&
-                                     (auto.autonomia >= autonomia)">
-                            <div class="card" style="width: 18rem;">
-                                <img v-bind:src="auto.foto" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                <h5 class="card-title">{{auto.marca}} {{auto.modello}}</h5>
-                                <p class="card-text">{{auto.descrizione}}</p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                <li class="list-group-item">a partire da: €{{auto.price}}</li>
-                                </ul>
-                                <div class="card-body">
-                                <a class="btn btn-primary btn-md" href="#" class="card-link">Scopri di più...</a>
-                                </div>
+              <div class="col-md">
+                <div class="row">
+                  <div class="col m-3" v-for="auto in condizioni":key="auto.id">
+                    <div class="card" style="width: 18rem;">
+                            <img v-bind:src="auto.foto" class="card-img-top" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title">{{auto.marca}} {{auto.modello}}</h5>
+                            <p class="card-text">{{auto.descrizione}}</p>
                             </div>
-                          </div>
-                        </div>
+                            <ul class="list-group list-group-flush">
+                            <li class="list-group-item">a partire da: €{{auto.price}}</li>
+                            </ul>
+                            <div class="card-body">
+                            <a class="btn btn-primary btn-md" href="#" class="card-link">Scopri di più...</a>
+                            </div>
                     </div>
+                  </div>
                 </div>
               </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="cars.json" type="application/javascript"></script>
     <script src="app.js" type="application/javascript"></script>
 </body>
