--- a/auto/auto.html
+++ b/auto/auto.html
@@ -36,7 +36,7 @@
     </nav>
       <!--Main-->
     <section class="AutoDisplay" id="app">
-          <div class="row row-cols-2">
+      <div class="row row-cols-2">
               <!--Menu ricerca-->
               <div class="col-md-2 bg-light collapse-horizontal navbar-expand-lg" style="height: 100vmax;">
                   <div class="container pt-3">
@@ -51,8 +51,8 @@
                               </h2>
                               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                  <input type="number" id="minPrezzo" class="form-control form-control-sm" placeholder="Prezzo minimo">
-                                  <input type="number" id="maxPrezzo" class="form-control form-control-sm" placeholder="Prezzo massimo">
+                                  <input type="number" id="minPrezzo" class="form-control form-control-sm" placeholder="Prezzo minimo" v-model="pmin">
+                                  <input type="number" id="maxPrezzo" class="form-control form-control-sm" placeholder="Prezzo massimo" v-model="pmax" min="5000">
                                 </div>
                               </div>
                             </div>
@@ -65,8 +65,8 @@
                             <option value="FIAT">Fiat</option>
                             <option value="MINI">Mini</option>
                             <option value="TESLA">Tesla</option>
+                            <option value="MERCEDES">Mercedes</option>
                         </select>
-                        {{marca}}
                         <label for="selectCarrozzeria" class="mt-4 ms-3">Carrozzeria:</label>
                         <select class="form-select" id="selectCarrozzeria" v-model="carrozzeria">
                             <option value="" selected>Seleziona tipologia</option>
@@ -75,6 +75,7 @@
                             <option value="supercar">Super Car</option>
                             <option value="suv">SUV</option>
                             <option value="crossover">Crossover</option>
+                            <option value="coupe">Coupé</option>
                         </select>
                         <label for="nPosti" class="mt-4 ms-3">Numero di posti:</label>
                         <div id="nPosti" class="form-check">
@@ -89,18 +90,33 @@
                             <input class="form-check-input" type="radio" id="2posti" v-model="posti" value="7">
                             <label class="form-check-label">7 posti</label><br>
                         </div>
-                        <p>posti {{posti}}</p>
                         <label for="customRange3" class="form-label mt-4 ms-3">Autonomia minima (km):</label>
                         <input type="range" class="form-range" min="200" max="700" step="50" id="autonomiaMin" value="700" v-model="autonomia">
                       </form>
-                      <p>Valore selezionato: {{autonomia}}</p>
+                      <p>Valore selezionato: {{autonomia}} km</p>
                   </div>
               </div>
               <!--Menu auto-->
               <div class="col-md">
                 <div class="row">
+                  <div v-if="!condizioni.length">
+                    <div class="container-md m-3">
+                      <div class="alert alert-danger" role="alert">
+                        Siamo spiacenti... 
+                        <div>
+                          <a href="./auto.html" class="alert-link">Indietro</a>
+                        </div>
+                      </div>
+                      <p class="lead ms-3"><strong>Per ora non sono presenti nel nostro sito auto corrispondenti ai criteri inseriti:</p></strong>
+                      <li class="lead mt-3 ms-3" v-if="this.marca != ''">{{marca}}</li>
+                      <li class="lead mt-3 ms-3" v-if="this.carrozzeria != ''">{{carrozzeria}}</li>
+                      <li class="lead mt-3 ms-3" v-if="this.posti != 0">{{posti}} posti</li>
+                      <li class="lead mt-3 ms-3" v-if="autonomia != 200">{{autonomia}} km di autonomia minima</li>
+                      <li class="lead mt-3 ms-3">da €{{pmin}},00 a €{{pmax}},00</li>
+                    </div>
+                  </div>
                   <div class="col m-3" v-for="auto in condizioni":key="auto.id">
-                    <div class="card" style="width: 18rem;">
+                      <div class="card" style="width: 18rem;">
                             <img v-bind:src="auto.foto" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">{{auto.marca}} {{auto.modello}}</h5>
@@ -112,13 +128,12 @@
                             <div class="card-body">
                             <a class="btn btn-primary btn-md" href="#" class="card-link">Scopri di più...</a>
                             </div>
-                    </div>
+                      </div>
                   </div>
                 </div>
               </div>
       </div>
     </section>
-    <script src="cars.json" type="application/javascript"></script>
     <script src="app.js" type="application/javascript"></script>
 </body>
 </html>
