--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         </div>
                         <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="https://www.google.com" style="text-decoration:none; color: white;">
-                            <img src="https://www.avvenire.it/c/2021/PublishingImages/e1c771b09d1b4ee492f4fe1441dc7e87/mercedes_e_74687387.jpg?width=1024" class="d-block w-100 rounded-10" alt="...">
+                            <a href="/news/notizia1.html" style="text-decoration:none; color: white;">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Fiat-500-vorne2.jpg" class="w-100 rounded-10" alt="...">
                             <div class="carousel-caption">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
@@ -59,7 +59,7 @@
                         </div>
                         <div class="carousel-item">
                             <a href="https://www.google.com" style="text-decoration:none; color: white;">
-                            <img src="https://cdn.pocket-lint.com/r/s/970x/assets/images/157922-cars-review-audi-e-tron-gt-review-image1-is1tutwhpd.jpg" class="d-block w-100 rounded-10" alt="...">
+                            <img src="https://cdn.pocket-lint.com/r/s/970x/assets/images/157922-cars-review-audi-e-tron-gt-review-image1-is1tutwhpd.jpg" class="w-100 rounded-10" alt="...">
                             <div class="carousel-caption">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="carousel-item">
                             <a href="https://www.google.com" style="text-decoration:none; color: white;">
-                            <img src="https://www.veicolielettricinews.it/files/2014/03/Schermata-2014-03-18-a-00.31.32.png" class="d-block w-100 rounded-10" alt="...">
+                            <img src="https://www.veicolielettricinews.it/files/2014/03/Schermata-2014-03-18-a-00.31.32.png" class="w-100 rounded-10" alt="...">
                             <div class="carousel-caption">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
@@ -91,11 +91,10 @@
     </section>
     <!-- parte news-->
     <section>
-        <div class="container" >
-            <div class="row mt-2" style="background-color: white;">
+        <div class="container mt-4 pt-2" >
+            <div class="row pt-3 bg-light rounded">
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <div>
-                    <hr>
                     <!-- titolo e descrizione -->
                     <a href="" class="text-dark">
                         <h5>This is title of the news</h5>
@@ -119,9 +118,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0 ">
+                <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <div>
-                    <hr>
             
                     <!-- titolo e descrizione -->
                     <a href="" class="text-dark">
@@ -147,7 +145,6 @@
                 </div>
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <div>
-                    <hr>
                     <!-- titolo e descrizione -->
                     <a href="" class="text-dark">
                         <h5>This is title of the news</h5>
