--- a/auto/auto.html
+++ b/auto/auto.html
@@ -13,7 +13,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-          <img src="https://upload.wikimedia.org/wikipedia/it/0/09/Twitter_bird_logo.png" alt="" height="45px">
+          <img src="../immagini/logo.png" alt="" height="45px">
           <a class="navbar-brand" href="#">Green Vehicle Demand</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -102,10 +102,10 @@
                   <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Toolbar with button groups">
                     <label class="lead mt-2">Ordina per: </label>
                     <div class="btn-group m-2" role="group" aria-label="First group">
-                      <button type="button" class="btn btn-primary" @click="sortPcresc">Prezzo crescente</button>
-                      <button type="button" class="btn btn-primary" @click="sortPdec">Prezzo decrescente</button>
-                      <button type="button" class="btn btn-primary" @click="sortPosti">Posti</button>
-                      <button type="button" class="btn btn-primary" @click="sortAut">Autonomia</button>
+                      <button type="button" class="btn btn-success" @click="sortPcresc">Prezzo crescente</button>
+                      <button type="button" class="btn btn-success" @click="sortPdec">Prezzo decrescente</button>
+                      <button type="button" class="btn btn-success" @click="sortPosti">Posti</button>
+                      <button type="button" class="btn btn-success" @click="sortAut">Autonomia</button>
                     </div>
                 </div>
                 <div class="row">
@@ -136,7 +136,7 @@
                             <li class="list-group-item">a partire da: €{{auto.price}}</li>
                             </ul>
                             <div class="card-body">
-                            <a class="btn btn-primary btn-md" href="#" class="card-link">Scopri di più...</a>
+                            <a class="btn btn-success btn-md" href="#" class="card-link">Scopri di più...</a>
                             </div>
                       </div>
                   </div>
