--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
-          <img src="https://upload.wikimedia.org/wikipedia/it/0/09/Twitter_bird_logo.png" alt="" height="45px">
+          <img src="./immagini/logo.png" alt="" height="45px">
           <a class="navbar-brand" href="#">Green Vehicle Demand</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
