--- a/auto/auto.html
+++ b/auto/auto.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="../index.html">Home</a>
-              <a class="nav-link active" href="auto/auto.html" aria-current="page">Le nostre auto</a>
+              <a class="nav-link active" href="auto.html" aria-current="page">Le nostre auto</a>
               <a class="nav-link" href="#">Pricing</a>
               <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
@@ -38,7 +38,7 @@
     <section class="AutoDisplay" id="app">
       <div class="row row-cols-2">
               <!--Menu ricerca-->
-              <div class="col-md-2 bg-light collapse-horizontal navbar-expand-lg" style="height: 100vmax;">
+              <div class="col-md-2 bg-light collapse-horizontal navbar-expand-lg" style="height: 100vmax max-content; min-height: 100%;" v-if="navbaron">
                   <div class="container pt-3">
                       <span class="lead">Filtra per:</span>
                       <form class="mt-3">
@@ -99,7 +99,7 @@
               <!--Menu auto-->
               <div class="col-md mainMenuBackground">
                 <div class="row">
-                  <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-toolbar justify-content-end" role="toolbar" aria-label="Toolbar with button groups" v-if="!show">
                     <label class="lead mt-2">Ordina per: </label>
                     <div class="btn-group m-2" role="group" aria-label="First group">
                       <button type="button" class="btn btn-success" @click="sortPcresc">Prezzo crescente</button>
@@ -125,7 +125,7 @@
                       <li class="lead mt-3 ms-3">da €{{pmin}},00 a €{{pmax}},00</li>
                     </div>
                   </div>
-                  <div class="col m-3" v-for="auto in condizioni":key="auto.id">
+                  <div class="col m-3" v-for="(auto, index) in condizioni":key="auto.id" v-if="!show">
                       <div class="card" style="width: 18rem;">
                             <img v-bind:src="auto.foto" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -136,9 +136,33 @@
                             <li class="list-group-item">a partire da: €{{auto.price}}</li>
                             </ul>
                             <div class="card-body">
-                            <a class="btn btn-success btn-md" href="#" class="card-link">Scopri di più...</a>
+                            <button class="btn btn-success btn-md" class="card-link" @click="discover(index)">Scopri di più...</button>
                             </div>
                       </div>
+                  </div>
+                  <div class="container m-3" v-else="">
+                    <p class="lead ms-2 text-sm">Scopri di più su {{scopri.marca}} {{scopri.modello}}:</p><hr>
+                    <div class="container">
+                      <div class="row row-cols-6"  style="border-radius: 10px;">
+                        <div style="padding: 0;" class="card-group" v-for="(foto, index) in scopri.immagini" id="smallPic">
+                          <img :src="foto" alt="" class="card-img-top photo" @click="imageZoom(foto, index)">
+                        </div>
+                      </div>
+                      <div id="frame">
+                        <img src="" class="img-fluid" alt="">
+                      </div>
+                      <p class="lead text-center">"{{scopri.descrizione}}"</p>
+                      <ul>
+                        <h4>Scheda tecnica:</h4>
+                        <li>Marca: <span class="lead">{{scopri.marca}}</span></li>
+                        <li>Modello: <span class="lead">{{scopri.modello}}</span></li>
+                        <li>Tipologia: <span class="lead">{{scopri.tipo}}</span></li>
+                        <li>Prezzo a partire da: <span class="lead">{{scopri.price}}</span></li>
+                        <li>Autonomia: <span class="lead">{{scopri.autonomia}} km</span></li>
+                        <li>Numero di posti: <span class="lead">{{scopri.posti}}</span></li>
+                      </ul>
+                    </div><hr>
+                    <button class="btn btn-success ms-2" @click="showLess">Mostra meno</button>
                   </div>
                 </div>
               </div>
