prime prove area personale

--- a/auto/auto.html
+++ b/auto/auto.html
@@ -22,13 +22,11 @@
             <div class="navbar-nav">
               <a class="nav-link" href="../index.html">Home</a>
               <a class="nav-link active" href="auto.html" aria-current="page">Le nostre auto</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="../index.html">Incentivi</a>
             </div>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link btn border-secondary" style="border-radius: 10px;" href="../index.html">Login</a>
-                <a class="nav-link">Registrati</a>
+                <a class="nav-link btn border-secondary" style="border-radius: 10px;" href="../personale/welcome.php">Area personale</a>
             </div>
           </div>
           </div>
@@ -151,7 +149,7 @@
                         </div>
                       </div>
                       <div class="row">
-                          <div class="col" id="frame">
+                          <div class="col" id="frame"><img :src="scopri.immagini[0]" style="height: 100%; width: 100%;">
                           </div>
                           <div class="col mt-4">
                             <ul>
