--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-8 ">
-                    <div id="carouselExampleCaptions" class="carousel slide mb-5 mt-4 mt-sm-2 mt-md-3" style="max-height: 80;" data-bs-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide mb-5 mt-4 mt-sm-2 mt-md-3" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
