modifiche martedi mattina

--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="auto/auto.html">Le nostre auto</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="auto/auto.php">Le nostre auto</a>
+              <a class="nav-link" href="">Incentivi</a>
+              <a class="nav-link" href="">Chi siamo?</a>
             </div>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link">Login</a>
-                <a class="nav-link">Registrati</a>
-            </div>
-          </div>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link btn border-secondary" style="border-radius: 10px;" href="../personale/welcome.php">Area personale</a>
+                </div>
+              </div>
           </div>
         </div>
       </nav>
