--- a/personale/index.html
+++ b/personale/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="../index.html">Home</a>
-              <a class="nav-link" href="../auto/auto.html">Le nostre auto</a>
+              <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
               <a class="nav-link active" href="#">Incentivi</a>
             </div>
           </div>
@@ -58,12 +58,31 @@
                 </div>
                 <div class="input-field">
                   <i class="fas fa-envelope"></i>
-                  <input type="number" placeholder="Telefono" name="inputTelefono" size="9" maxlength="9" required/>
+                  <input type="text" placeholder="Telefono" name="inputTelefono" size="10" maxlength="10" required/>
                 </div>
-                <div class="input-field">
-                  <i class="fas fa-envelope"></i>
-                  <input type="number" placeholder="CAP" name="inputCAP" size="5" maxlength="5" required/>
-                </div>
+                  <select name="inputRegione" class="form-select btn btn-light" style="max-width: 380px; width: 100%;">
+                    <option selected>Seleziona regione</option>
+                    <option value="Abruzzo">Abruzzo</option>
+                    <option value="Basilicata">Basilicata</option>
+                    <option value="Calabria">Calabria</option>
+                    <option value="Campania">Campania</option>
+                    <option value="Emilia Romagna">Emilia Romagna</option>
+                    <option value="Friuli-Venezia Giulia">Friuli-Venezia Giulia</option>
+                    <option value="Lazio">Lazio</option>
+                    <option value="Liguria">Liguria</option>
+                    <option value="Lombardia">Lombardia</option>
+                    <option value="Marche">Marche</option>
+                    <option value="Molise">Molise</option>
+                    <option value="Piemonte">Piemonte</option>
+                    <option value="Puglia">Puglia</option>
+                    <option value="Sardegna">Sardegna</option>
+                    <option value="Sicilia">Sicilia</option>
+                    <option value="Toscana">Toscana</option>
+                    <option value="Trentino-Alto Adige">Trentino-Alto Adige</option>
+                    <option value="Umbria">Umbria</option>
+                    <option value="Val d'Aosta">Val d'Aosta</option>
+                    <option value="Veneto">Veneto</option>
+                  </select>
                 <div class="input-field">
                   <i class="fas fa-lock"></i>
                   <input type="password" placeholder="Password" name="inputPassword" required/>
