sistemazione pre merge

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     <!--Mappa colonnine-->
     <div class="row mt-2 me-0 justify-content-center">
-        <div class="col-8 mb-3 ">
+        <div class="col-lg-8 mb-3 text-lg-start text-center">
         <h3 >TROVA LA STAZIONE DI RICARICA PIU' VICINA A TE</h3> 
         </div>
         <div class="col-lg-8 pe-0" style="height: 70vh;">
