--- a/auto/auto.html
+++ b/auto/auto.html
@@ -97,7 +97,7 @@
               </div>
               <!--Menu auto-->
               <div class="col-md mainMenuBackground">
-                <div class="row justify-content-md-start justify-content-around">
+                <div class="row justify-content-md-start justify-content-center">
                   <button class="btn btn-success btn-sm m-2 ms-md-4 col-10 col-md-1" @click="this.navbaron = true" v-if="!navbaron && !show">Filtri</button>
                   <div class="btn-toolbar justify-content-center justify-content-lg-end col" role="toolbar" aria-label="Toolbar with button groups" v-if="!show">
                     <label class="lead mt-2">Ordina per: </label>
