--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="auto/auto.php">Le nostre auto</a>
                     <a class="nav-link" href="">Incentivi</a>
-                    <a class="nav-link" href="">Chi siamo?</a>
+                    <a class="nav-link" href="about-us/about-us.html">Chi siamo?</a>
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
@@ -160,6 +160,7 @@
             </div>
         </div>
         <script src="/news/app_news.js" type="application/javascript"></script>
+    </div>
 </body>
 
 </html>
