--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -12,87 +12,106 @@
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <img src="../immagini/logo.png" alt="" height="45px">
-        <a class="navbar-brand" href="#">Green Vehicle Demand</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link active" href="auto.html" aria-current="page">Le nostre auto</a>
-            <a class="nav-link" href="../index.html">Incentivi</a>
+          <img src="../immagini/logo.png" alt="" height="45px">
+          <a class="navbar-brand" href="#">Green Vehicle Demand</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                  <a class="nav-link" href="../auto/auto.php">Le nostre auto</a>
+                  <a class="nav-link" href="">Incentivi</a>
+                  <a class="nav-link" href="about-us.html">Chi siamo?</a>
+              </div>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                      <a class="nav-link btn border-secondary" style="border-radius: 10px;"
+                          href="../personale/welcome.php">Area personale</a>
+                  </div>
+              </div>
           </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-              <a class="nav-link btn border-secondary" style="border-radius: 10px;" href="../personale/welcome.php">Area personale</a>
-          </div>
-        </div>
-        </div>
       </div>
-  </nav>
-
+    </nav>
   <!--Mappa e descrizione-->
   <div class="container">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid" src="https://picsum.photos/130/130?image=1027">
-          </div>
-          <div class="team-content">
-            <h3 class="name">Matteo Cutroni</h3>
-            <h4 class="title">Studente</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
-          </ul>
-        </div>
+    <div class="row mt-5">
+      <div class="col-md-6">
+        <h4>Dove siamo:</h4>
+        <p>Sede in Viale dello Scalo S. Lorenzo, 82, 00159 Roma RM</p>
+          <iframe  style="height: 70vh;" src="https://map.openchargemap.io/?mode=embedded&longitude=12.5209527 &latitude=41.8964095" allow="geolocation" frameborder="0" width="100%" height="100%"></iframe>
       </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid" src="https://picsum.photos/130/130?image=1027">
+      <div class="col-md-6">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <h4 class="mb-3">Chi siamo: </h4>
+            <div class="our-team">
+              <div class="picture">
+                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/3048/3048122.png">
+              </div>
+              <div class="team-content">
+                <h3 class="name">Simone Pascucci</h3>
+                <h4 class="title">Studente</h4>
+              </div>
+              <ul class="social">
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="team-content">
-            <h3 class="name">Simone Pascucci</h3>
-            <h4 class="title">Studente</h4>
-          </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
-          </ul>
         </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-        <div class="our-team">
-          <div class="picture">
-            <img class="img-fluid" src="https://picsum.photos/130/130?image=1027">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="our-team">
+              <div class="picture">
+                <img class="img-fluid" src="https://cdn-icons.flaticon.com/png/512/3006/premium/3006876.png?token=exp=1654016090~hmac=63e1321d2498bea563006a31d48c3654">
+              </div>
+              <div class="team-content">
+                <h3 class="name">Giuseppe Pilla</h3>
+                <h4 class="title">Studente</h4>
+              </div>
+              <ul class="social">
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="team-content">
-            <h3 class="name">Giuseppe Pilla</h3>
-            <h4 class="title">Studente</h4>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="our-team">
+              <div class="picture">
+                <img class="img-fluid" src="https://cdn-icons-png.flaticon.com/512/1864/1864593.png">
+              </div>
+              <div class="team-content">
+                <h3 class="name">Matteo Cutroni</h3>
+                <h4 class="title">Studente</h4>
+              </div>
+              <ul class="social">
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
+                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+              </ul>
+            </div>
           </div>
-          <ul class="social">
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-            <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
-          </ul>
         </div>
       </div>
     </div>
   </div>
-   <!--Footer-->
-   <div class="container mt-5 p-3">
-    <div class="row">
-      <div class="text-left text-md-start">
-        <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022 Pilla-Pascucci-Cutroni</span>
-    </div>
+    <!--Footer-->
+    <div class="container mt-5 p-3">
+      <div class="row">
+          <div class="text-left text-md-start">
+              <span class="copyright">Copyright &copy; Progetto Linguaggi e tecnologie per il web 2022
+                  Pilla-Pascucci-Cutroni</span>
+          </div>
+      </div>
+      <script src="/news/app_news.js" type="application/javascript"></script>
   </div>
 </body>
 </html>
