piccoli accorgimenti about us

--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -57,9 +57,8 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/simone.pascucci.581" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/simonepascuu/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
@@ -75,9 +74,9 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
+                <li><a href="" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
@@ -93,9 +92,9 @@
                 <h4 class="title">Studente</h4>
               </div>
               <ul class="social">
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
-                <li><a href="https://codepen.io/collection/XdWJOQ/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
+                <li><a href="https://www.facebook.com/matteo.cutroni" aria-hidden="true"><img src="/about-us/icons/facebook.png" alt=""></a></li>
+                <li><a href="https://twitter.com/mat_cutro" aria-hidden="true"><img src="/about-us/icons/twitter.png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/mat_cutro/" aria-hidden="true"><img src="/about-us/icons/instagram.png" alt=""></a></li>
               </ul>
             </div>
           </div>
